--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,26 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "ES2022",
-        "lib": [
-            "ES2022"
-        ],
+        "target": "ES2020",
         "outDir": "out",
-        "rootDir": "src",
+        "lib": [
+            "ES2020"
+        ],
         "sourceMap": true,
-        "strict": true,
+        "rootDir": "src",
+        "strict": false,
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
+        "noImplicitAny": false,
+        "strictNullChecks": false,
         "resolveJsonModule": true,
-        "moduleResolution": "node",
-        "declaration": true,
-        "declarationMap": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true,
-        "allowSyntheticDefaultImports": true
+        "moduleResolution": "node"
     },
-    "include": [
-        "src/**/*"
-    ],
     "exclude": [
         "node_modules",
+        ".vscode-test",
         "out",
         "dist",
-        "webview",
-        ".vscode-test"
+        "webview"
     ]
 }
