pkg json updated

--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
         {
           "type": "webview",
           "id": "codemind.panel",
-          "name": "Dashboard"
+          "name": "Dashboard",
+          "retainContextWhenHidden": true
         }
       ]
     },
