updated the models and fixed errors

--- a/package.json
+++ b/package.json
@@ -129,9 +129,7 @@
             "claude-haiku",
             "deepseek-coder",
             "deepseek-chat",
-            "groq-llama-3.1-70b",
-            "groq-mixtral-8x7b",
-            "groq-llama-3.1-8b",
+            "llama-3.1-8b-instant",
             "ollama-local",
             "lmstudio-local"
           ],
@@ -142,9 +140,7 @@
             "Claude Haiku - Fast & Efficient",
             "DeepSeek Coder - Optimized for Coding",
             "DeepSeek Chat - General Purpose",
-            "Groq LLaMA 3.1 70B - High Speed",
-            "Groq Mixtral 8x7B - High Performance",
-            "Groq LLaMA 3.1 8B - Extremely Fast",
+            "Groq LLaMA 3.1 8B - Extremely Fast & Free",
             "Ollama (Local) - Run models locally",
             "LM Studio (Local) - Run models locally"
           ],
@@ -274,7 +270,7 @@
     "build:webview": "cd src/webview && npm run build",
     "watch": "concurrently \"npm run watch:extension\" \"npm run watch:webview\"",
     "watch:extension": "webpack --mode development --watch --config webpack.extension.config.js",
-    "watch:webview": "cd src/webview && npm run dev",
+    "watch:webview": "cd src/webview && vite build --watch",
     "compile": "tsc -p ./",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
